Preparing for war-based project, removed ear and jboss it config.
git-svn-id: https://motech.rcg.usm.maine.edu/svn/motech/branches/spring@95 6f28304a-7744-dd4f-b2a8-8a00c5622ee2